<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#EEEEEE"
        android:drawableEnd="@drawable/button_image"
        android:text="@string/meeting_date"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#ABABAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/button_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EEEEEE"
        android:drawableEnd="@drawable/button_image"
        android:text="@string/start_time"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#ABABAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_date" />

    <Button
        android:id="@+id/button_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EEEEEE"
        android:drawableEnd="@drawable/button_image"
        android:text="@string/end_time"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#ABABAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_time" />

    <EditText
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="Description"
        android:background="@drawable/my_border_white"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#ABABAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_end_time"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#16A085"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>